# cpp-daemon-template

./: CMakeLists.txt  LICENSE  README.md
daemon/: CMakeLists.txt
daemon/include/: CommandLineParser.hpp  Daemon.hpp  Log.hpp  command-line-parser.hpp  daemon.hpp  log.hpp
daemon/resource/systemd/: daemon-template.service
daemon/source/: Daemon.cpp  Main.cpp  daemon.cpp  main.cpp
resource/config/: daemon-template.conf
resource/systemd/: daemon-template.service
